--- a/manuscrit_G_LEFEBVRE/biblio.bib
+++ b/manuscrit_G_LEFEBVRE/biblio.bib
@@ -51,6 +51,24 @@ keywords = "Signal transduction "
   year={1994}
 }
 
+@article{shu1988efficient,
+  title={Efficient implementation of essentially non-oscillatory shock-capturing schemes},
+  author={Shu, Chi-Wang and Osher, Stanley},
+  journal={Journal of Computational Physics},
+  volume={77},
+  number={2},
+  pages={439--471},
+  year={1988},
+  publisher={Elsevier}
+}
+
+@book{cristini2010multiscale,
+  title={Multiscale modeling of cancer: an integrated experimental and mathematical modeling approach},
+  author={Cristini, Vittorio and Lowengrub, John},
+  year={2010},
+  publisher={Cambridge University Press}
+}
+
 
 
 @article{Billy2009545,
@@ -95,6 +113,53 @@ keywords = "Optimization of cancer treatments "
   publisher={Elsevier}
 }
 
+@article{topal2005cancer,
+  title={Cancer cell dissemination during curative surgery for colorectal liver metastases},
+  author={Topal, Baki and Aerts, JL and Roskams, Tania and Fieuws, Steffen and Van Pelt, Jos and Vandekerckhove, Philippe and Penninckx, Freddy},
+  journal={European Journal of Surgical Oncology (EJSO)},
+  volume={31},
+  number={5},
+  pages={506--511},
+  year={2005},
+  publisher={Elsevier}
+}
+
+@article{nguyen2009metastasis,
+  title={Metastasis: from dissemination to organ-specific colonization},
+  author={Nguyen, Don X and Bos, Paula D and Massagu{\'e}, Joan},
+  journal={Nature Reviews Cancer},
+  volume={9},
+  number={4},
+  pages={274--284},
+  year={2009},
+  publisher={Nature Publishing Group}
+}
+
+
+@article{cornelis2013vivo,
+  title={In vivo mathematical modeling of tumor growth from imaging data: Soon to come in the future?},
+  author={Cornelis, F and Saut, O and Cumsille, P and Lombardi, D and Iollo, A and Palussiere, J and Colin, T},
+  journal={Diagnostic and interventional imaging},
+  volume={94},
+  number={6},
+  pages={593--600},
+  year={2013},
+  publisher={Elsevier}
+}
+
+
+@article{houk2010relationship,
+  title={Relationship between exposure to sunitinib and efficacy and tolerability endpoints in patients with cancer: results of a pharmacokinetic/pharmacodynamic meta-analysis},
+  author={Houk, Brett E and Bello, Carlo L and Poland, Bill and Rosen, Lee S and Demetri, George D and Motzer, Robert J},
+  journal={Cancer chemotherapy and pharmacology},
+  volume={66},
+  number={2},
+  pages={357--371},
+  year={2010},
+  publisher={Springer}
+}
+
+
 @article{Fathallah2013,
 title = "A Multilayer Grow-or-Go Model for {GBM}: Effects of
 Invasive Cells and Anti-Angiogenesis on Growth",
@@ -136,6 +201,52 @@ year = {2009},
 publisher = {aimSciences},
 pdf = {http://hal.inria.fr/inria-00267292/PDF/paper.pdf},
 }
+
+@article{rockne2009mathematical,
+  title={A mathematical model for brain tumor response to radiation therapy},
+  author={Rockne, R and Alvord Jr, EC and Rockhill, JK and Swanson, KR},
+  journal={Journal of mathematical biology},
+  volume={58},
+  number={4-5},
+  pages={561--578},
+  year={2009},
+  publisher={Springer}
+}
+
+@article{choi2007correlation,
+  title={Correlation of computed tomography and positron emission tomography in patients with metastatic gastrointestinal stromal tumor treated at a single institution with imatinib mesylate: proposal of new computed tomography response criteria},
+  author={Choi, Haesun and Charnsangavej, Chuslip and Faria, Silvana C and Macapinlac, Homer A and Burgess, Michael A and Patel, Shreyaskumar R and Chen, Lei L and Podoloff, Donald A and Benjamin, Robert S},
+  journal={Journal of clinical Oncology},
+  volume={25},
+  number={13},
+  pages={1753--1759},
+  year={2007},
+  publisher={American Society of Clinical Oncology}
+}
+
+@article{kalkmann2012consensus,
+  title={Consensus report on the radiological management of patients with gastrointestinal stromal tumours (GIST): recommendations of the German GIST Imaging Working Group},
+  author={Kalkmann, Janine and Zeile, Martin and Antoch, Gerald and Berger, Frank and Diederich, Stefan and Dinter, Dietmar and Fink, Christian and Janka, Rolf and Stattaus, J{\"o}rg},
+  journal={Cancer Imaging},
+  volume={12},
+  number={1},
+  pages={126},
+  year={2012},
+  publisher={International Cancer Imaging Society}
+}
+
+
+@article{gerlee2013model,
+  title={The model muddle: in search of tumor growth laws},
+  author={Gerlee, Philip},
+  journal={Cancer research},
+  volume={73},
+  number={8},
+  pages={2407--2411},
+  year={2013},
+  publisher={AACR}
+}
+
 
 @article{Iollo2012,
 author = {Colin, T. and Iollo, A. and Lombardi, D. and Saut, O.},
@@ -231,6 +342,53 @@ keywords = "Tyrosine kinase inhibitor",
 keywords = {GIST}
 }
 
+@article{langley2011seed,
+  title={The seed and soil hypothesis revisited—The role of tumor-stroma interactions in metastasis to different organs},
+  author={Langley, Robert R and Fidler, Isaiah J},
+  journal={International Journal of Cancer},
+  volume={128},
+  number={11},
+  pages={2527--2535},
+  year={2011},
+  publisher={Wiley Online Library}
+}
+
+@article{Demetri20061329,
+title = "Efficacy and safety of sunitinib in patients with advanced gastrointestinal stromal tumour after failure of imatinib: a randomised controlled trial ",
+journal = "The Lancet ",
+volume = "368",
+number = "9544",
+pages = "1329 - 1338",
+year = "2006",
+issn = "0140-6736",
+doi = "http://dx.doi.org/10.1016/S0140-6736(06)69446-4",
+url = "http://www.sciencedirect.com/science/article/pii/S0140673606694464",
+author = "George D Demetri and Allan T van Oosterom and Christopher R Garrett and Martin E Blackstein and Manisha H Shah and Jaap Verweij and Grant McArthur and Ian R Judson and Michael C Heinrich and Jeffrey A Morgan and Jayesh Desai and Christopher D Fletcher and Suzanne George and Carlo L Bello and Xin Huang and Charles M Baum and Paolo G Casali"
+}
+
+@article{saltz2007phase,
+  title={Phase II trial of sunitinib in patients with metastatic colorectal cancer after failure of standard therapy},
+  author={Saltz, Leonard B and Rosen, Lee S and Marshall, John L and Belt, Robert J and Hurwitz, Herbert I and Eckhardt, S Gail and Bergsland, Emily K and Haller, Daniel G and Lockhart, A Craig and Lima, Caio M Rocha and others},
+  journal={Journal of Clinical Oncology},
+  volume={25},
+  number={30},
+  pages={4793--4799},
+  year={2007},
+  publisher={American Society of Clinical Oncology}
+}
+
+@article{mccollough2009strategies,
+  title={Strategies for reducing radiation dose in CT},
+  author={McCollough, Cynthia H and Primak, Andrew N and Braun, Natalie and Kofler, James and Yu, Lifeng and Christner, Jodie},
+  journal={Radiologic Clinics of North America},
+  volume={47},
+  number={1},
+  pages={27--40},
+  year={2009},
+  publisher={Elsevier}
+}
+
+
 @article{Hirota1998,
 author = {Hirota, S. and Isozaki, K. and Moriyama, Y. and Hashimoto, K. and Nishida, T. and Ishiguro, S. and Kawano, K. and Hanada, M. and Kurata, A. and Muhammad Tunio, G. and Matsuzawa, Y. and Kanakura Y. and Shinomura, Y. and Kitamura, Y.},
 title = {Gain-of-function mutations of c-kit in human gastrointestinal stromal tumors},
@@ -256,6 +414,39 @@ doi = {10.1200/JCO.2007.15.5556},
 URL = {http://www.ncbi.nlm.nih.gov/pubmed/18487569}
 }
 
+@article{goldman2008principles,
+  title={Principles of CT: multislice CT},
+  author={Goldman, Lee W},
+  journal={Journal of nuclear medicine technology},
+  volume={36},
+  number={2},
+  pages={57--68},
+  year={2008},
+  publisher={Soc Nuclear Med}
+}
+
+@article{li2011assessment,
+  title={Assessment of tumor vascularization with functional computed tomography perfusion imaging in patients with cirrhotic liver disease},
+  author={Li, Jin-Ping and Zhao, De-Li and Jiang, Hui-Jie and Huang, Ya-Hua and Li, Da-Qing and Wan, Yong and Liu, Xin-Ding and Wang, Jin-E},
+  journal={Hepatobiliary \& Pancreatic Diseases International},
+  volume={10},
+  number={1},
+  pages={43--49},
+  year={2011},
+  publisher={Elsevier}
+}
+
+@article{rengo2011optimal,
+  title={The optimal contrast media policy in CT of the liver. Part II: Clinical protocols},
+  author={Rengo, Marco and Bellini, Davide and De Cecco, Carlo N and Osimani, Marcello and Vecchietti, Fabrizio and Caruso, Damiano and Maceroni, Marco M and Lucchesi, Paola and Iafrate, Franco and Palombo, Erica and others},
+  journal={Acta Radiologica},
+  volume={52},
+  number={5},
+  pages={473--480},
+  year={2011},
+  publisher={SAGE Publications}
+}
+
 @article{Ribba2006532,
 title = "A multiscale mathematical model of avascular tumor growth to investigate the therapeutic benefit of anti-invasive agents ",
 journal = "Journal of Theoretical Biology ",
@@ -273,6 +464,18 @@ keywords = "Metalloproteinase inhibitors",
 keywords = "Cytostatic agents",
 keywords = "Therapeutic development "
 }
+
+@article{mansury2002emerging,
+  title={Emerging patterns in tumor systems: simulating the dynamics of multicellular clusters with an agent-based spatial agglomeration model},
+  author={Mansury, Yuri and Kimura, Mark and Lobo, Jose and Deisboeck, Thomas S},
+  journal={Journal of Theoretical Biology},
+  volume={219},
+  number={3},
+  pages={343--370},
+  year={2002},
+  publisher={Elsevier}
+}
+
 
 @article{ambrosi2002,
 author = {Ambrosi, D. and Preziosi, L.},
@@ -377,6 +580,28 @@ url = "http://www.sciencedirect.com/science/article/pii/S0022519302931310",
 author = "Mansury, Y. and Kimura, M. and Lobo, J. and Deisboeck, T.S."
 }
 
+@article{alarcon2003cellular,
+  title={A cellular automaton model for tumour growth in inhomogeneous environment},
+  author={Alarc{\'o}n, Tom{\'a}s and Byrne, Helen M and Maini, Philip K},
+  journal={Journal of Theoretical Biology},
+  volume={225},
+  number={2},
+  pages={257--274},
+  year={2003},
+  publisher={Elsevier}
+}
+
+@article{drasdo2003individual,
+  title={Individual-based approaches to birth and death in avascu1ar tumors},
+  author={Drasdo, D and H{\"o}hme, S},
+  journal={Mathematical and Computer Modelling},
+  volume={37},
+  number={11},
+  pages={1163--1175},
+  year={2003},
+  publisher={Elsevier}
+}
+
 @article{dematteo2000,
 title={Two hundred gastrointestinal stromal tumors: recurrence patterns and prognostic factors for survival},
 author={DeMatteo, Ronald P and Lewis, Jonathan J and Leung, Denis and Mudan, Satvinder S and Woodruff, James M and Brennan, Murray F},
@@ -449,6 +674,14 @@ title = {L'angiogenèse des tumeurs cérébrales malignes},
 urldate = {20/07/2015}
 }
 
+@article{bast2000tumor,
+  title={Tumor Angiogenesis},
+  author={Bast, Robert C and Kufe, Donald W and Pollock, Raphael E and Weichselbaum, Ralph R and Holland, James F and Frei, Emil and Folkman, Judah and others},
+  year={2000},
+  publisher={BC Decker}
+}
+
+
 @article{choi2008response,
   title={Response evaluation of gastrointestinal stromal tumors},
   author={Choi, Haesun},
@@ -479,6 +712,16 @@ urldate = {20/07/2015}
   publisher={Siam}
 }
 
+@article{eymard2000finite,
+  title={Finite volume methods},
+  author={Eymard, Robert and Gallou{\"e}t, Thierry and Herbin, Rapha{\`e}le},
+  journal={Handbook of numerical analysis},
+  volume={7},
+  pages={713--1018},
+  year={2000},
+  publisher={Elsevier}
+}
+
 @article{latige2013second,
   title={A second order Cartesian finite volume method for elliptic interface and embedded Dirichlet problems},
   author={Latige, Manuel and Colin, T and Gallice, G},
@@ -488,6 +731,20 @@ urldate = {20/07/2015}
   year={2013},
   publisher={Elsevier}
 }
+
+@misc{balay2012petsc,
+  title={PETSc Web page, 2012},
+  author={Balay, Satish and Brown, Jed and Buschelman, Kris and Gropp, William D and Kaushik, Dinesh and Knepley, Matthew G and McInnes, Lois Curfman and Smith, Barry F and Zhang, Hong},
+  year={2012}
+}
+
+@techreport{balay2012zhang,
+  title={Zhang H. PETSc users manual},
+  author={Balay, Satish and Brown, Jed and Buschelman, Kris and Eijkhout, Victor and Gropp, William D and Kaushik, Dinesh and Knepley, Matthew G and McInnes, Lois Curfman and Smith, Barry F},
+  year={2012},
+  institution={Technical Report ANL-95/11-Revision 3.3, Argonne National Laboratory}
+}
+
 
 @techreport{michel:hal-01211770,
   TITLE = {{Mathematical study and asymptotic analysis of a model for tumour drug resistance}},
@@ -503,4 +760,362 @@ urldate = {20/07/2015}
   HAL_ID = {hal-01211770},
   HAL_VERSION = {v1},
 }
+
+@techreport{lefebvre:hal-01089452,
+  TITLE = {{Spatial Modeling of Tumor Drug Resistance: the case of GIST Liver Metastases}},
+  AUTHOR = {Lefebvre, Guillaume and Cornelis, Fran{\c c}ois and Cumsille, Patricio and Colin, Thierry and Poignard, Clair and Saut, Olivier},
+  URL = {https://hal.inria.fr/hal-01089452},
+  TYPE = {Research Report},
+  NUMBER = {RR-8642},
+  PAGES = {26},
+  INSTITUTION = {{INRIA Bordeaux ; INRIA}},
+  YEAR = {2014},
+  MONTH = Dec,
+  KEYWORDS = {resistance and relapse ; GIST metastases ; mathematical modeling ; treatments ; numerical simulations},
+  PDF = {https://hal.inria.fr/hal-01089452/file/RR-8642.pdf},
+  HAL_ID = {hal-01089452},
+  HAL_VERSION = {v2},
+}
+
+@article{demetri2011gastrointestinal,
+  title={Gastrointestinal stromal tumor},
+  author={Demetri, George D},
+  journal={DeVita VT Jr, Lawrence TS, Rosenberg SA: Cancer: Principles and Practice of Oncology},
+  publisher={9th Philadelphia, Pa: Lippincott Williams and Wilkins},
+  pages={1060--73},
+  year={2011}
+}
+
+@article{rubin2001kit,
+  title={KIT activation is a ubiquitous feature of gastrointestinal stromal tumors},
+  author={Rubin, Brian P and Singer, Samuel and Tsao, Connie and Duensing, Anette and Lux, Marcia L and Ruiz, Robert and Hibbard, Michele K and Chen, Chang-Jie and Xiao, Sheng and Tuveson, David A and others},
+  journal={Cancer research},
+  volume={61},
+  number={22},
+  pages={8118--8121},
+  year={2001},
+  publisher={AACR}
+}
+
+@article{lux2000kit,
+  title={KIT extracellular and kinase domain mutations in gastrointestinal stromal tumors},
+  author={Lux, Marcia L and Rubin, Brian P and Biase, Tara L and Chen, Chang-Jie and Maclure, Timothy and Demetri, George and Xiao, Sheng and Singer, Samuel and Fletcher, Christopher DM and Fletcher, Jonathan A},
+  journal={The American journal of pathology},
+  volume={156},
+  number={3},
+  pages={791--795},
+  year={2000},
+  publisher={Elsevier}
+}
+
+@article{lasota2000mutations,
+  title={Mutations in exons 9 and 13 of KIT gene are rare events in gastrointestinal stromal tumors: a study of 200 cases},
+  author={Lasota, Jerzy and Wozniak, Agnieszka and Sarlomo-Rikala, Maarit and Rys, Janusz and Kordek, Radzislaw and Nassar, Aziza and Sobin, Leslie H and Miettinen, Markku},
+  journal={The American journal of pathology},
+  volume={157},
+  number={4},
+  pages={1091--1095},
+  year={2000},
+  publisher={Elsevier}
+}
+
+@article{demetri2002efficacy,
+  title={Efficacy and safety of imatinib mesylate in advanced gastrointestinal stromal tumors},
+  author={Demetri, George D and von Mehren, Margaret and Blanke, Charles D and Van den Abbeele, Annick D and Eisenberg, Burton and Roberts, Peter J and Heinrich, Michael C and Tuveson, David A and Singer, Samuel and Janicek, Milos and others},
+  journal={New England Journal of Medicine},
+  volume={347},
+  number={7},
+  pages={472--480},
+  year={2002},
+  publisher={Mass Medical Soc}
+}
+
+@article{kim2014ct,
+  title={CT perfusion of the liver: principles and applications in oncology},
+  author={Kim, Se Hyung and Kamaya, Aya and Willmann, J{\"u}rgen K},
+  journal={Radiology},
+  volume={272},
+  number={2},
+  pages={322--344},
+  year={2014},
+  publisher={Radiological Society of North America}
+}
+
+@article{ichikawa2006multiphasic,
+  title={Multiphasic contrast-enhanced multidetector-row CT of liver: contrast-enhancement theory and practical scan protocol with a combination of fixed injection duration and patients’ body-weight-tailored dose of contrast material},
+  author={Ichikawa, Tomoaki and Erturk, Sukru Mehmet and Araki, Tsutomu},
+  journal={European journal of radiology},
+  volume={58},
+  number={2},
+  pages={165--176},
+  year={2006},
+  publisher={Elsevier}
+}
+
+@book{goldberg1994algorithmes,
+  title={Algorithmes g{\'e}n{\'e}tiques: exploration, optimisation et apprentissage automatique},
+  author={Goldberg, David Edward and Corruble, Vincent and Ganascia, Jean-Gabriel and Holland, John},
+  year={1994},
+  publisher={Addison-Wesley France}
+}
+
+@book{spall2005introduction,
+  title={Introduction to stochastic search and optimization: estimation, simulation, and control},
+  author={Spall, James C},
+  volume={65},
+  year={2005},
+  publisher={John Wiley \& Sons}
+}
+
+@article{davis1987genetic,
+  title={Genetic algorithms and simulated annealing},
+  author={Davis, Lawrence},
+  year={1987},
+  publisher={Morgan Kaufman Publishers, Inc., Los Altos, CA}
+}
+
+@article{gottlieb2006fifth,
+  title={A fifth order flux implicit WENO method},
+  author={Gottlieb, Sigal and Mullen, Julia S and Ruuth, Steven J},
+  journal={Journal of Scientific Computing},
+  volume={27},
+  number={1-3},
+  pages={271--287},
+  year={2006},
+  publisher={Springer}
+}
+
+@article{lorz2013populational,
+  title={Populational adaptive evolution, chemotherapeutic resistance and multiple anti-cancer therapies},
+  author={Lorz, Alexander and Lorenzi, Tommaso and Hochberg, Michael E and Clairambault, Jean and Perthame, Beno{\^\i}t},
+  journal={ESAIM: Mathematical Modelling and Numerical Analysis},
+  volume={47},
+  number={02},
+  pages={377--399},
+  year={2013},
+  publisher={Cambridge Univ Press}
+}
+
+@article{bernard2014world,
+  title={World cancer report 2014},
+  author={Bernard, WS and Christopher, PW},
+  journal={IARC (International Agency for Research on Cancer), Lyon, France},
+  year={2014}
+}
+
+--  Biblio sur l'analyse d hetero --
+
+@article{heppner1984tumor,
+  title={Tumor heterogeneity},
+  author={Heppner, Gloria H},
+  journal={Cancer research},
+  volume={44},
+  number={6},
+  pages={2259--2265},
+  year={1984},
+  publisher={AACR}
+}
+
+
+@article{eary2008spatial,
+  title={Spatial heterogeneity in sarcoma 18F-FDG uptake as a predictor of patient outcome},
+  author={Eary, Janet F and O'Sullivan, Finbarr and O'Sullivan, Janet and Conrad, Ernest U},
+  journal={Journal of Nuclear Medicine},
+  volume={49},
+  number={12},
+  pages={1973--1979},
+  year={2008},
+  publisher={Soc Nuclear Med}
+}
+
+
+@article{castellano2004texture,
+  title={Texture analysis of medical images},
+  author={Castellano, G and Bonilha, L and Li, LM and Cendes, F},
+  journal={Clinical radiology},
+  volume={59},
+  number={12},
+  pages={1061--1069},
+  year={2004},
+  publisher={Elsevier}
+}
+
+@article{haralick1979statistical,
+  title={Statistical and structural approaches to texture},
+  author={Haralick, Robert M},
+  journal={Proceedings of the IEEE},
+  volume={67},
+  number={5},
+  pages={786--804},
+  year={1979},
+  publisher={IEEE}
+}
+
+@article{pal1993review,
+  title={A review on image segmentation techniques},
+  author={Pal, Nikhil R and Pal, Sankar K},
+  journal={Pattern recognition},
+  volume={26},
+  number={9},
+  pages={1277--1294},
+  year={1993},
+  publisher={Elsevier}
+}
+
+
+@article{hatt2010accurate,
+  title={Accurate automatic delineation of heterogeneous functional volumes in positron emission tomography for oncology applications},
+  author={Hatt, Mathieu and Le Rest, Catherine Cheze and Descourt, Patrice and Dekker, Andr{\'e} and De Ruysscher, Dirk and Oellers, Michel and Lambin, Philippe and Pradier, Olivier and Visvikis, Dimitris},
+  journal={International Journal of Radiation Oncology* Biology* Physics},
+  volume={77},
+  number={1},
+  pages={301--308},
+  year={2010},
+  publisher={Elsevier}
+}
+
+@article{ahmed2013texture,
+  title={Texture analysis in assessment and prediction of chemotherapy response in breast cancer},
+  author={Ahmed, Arfan and Gibbs, Peter and Pickles, Martin and Turnbull, Lindsay},
+  journal={Journal of Magnetic Resonance Imaging},
+  volume={38},
+  number={1},
+  pages={89--101},
+  year={2013},
+  publisher={Wiley Online Library}
+}
+
+
+
+@article{longo2015cluster,
+  title={Cluster analysis of quantitative parametric maps from DCE-MRI: application in evaluating heterogeneity of tumor response to antiangiogenic treatment},
+  author={Longo, Dario Livio and Dastr{\`u}, Walter and Consolino, Lorena and Espak, Miklos and Arigoni, Maddalena and Cavallo, Federica and Aime, Silvio},
+  journal={Magnetic resonance imaging},
+  year={2015},
+  publisher={Elsevier}
+}
+
+
+@article{materka1998texture,
+  title={Texture analysis methods--a review},
+  author={Materka, Andrzej and Strzelecki, Michal and others},
+  journal={Technical university of lodz, institute of electronics, COST B11 report, Brussels},
+  pages={9--11},
+  year={1998}
+}
+
+@article{chu1990use,
+  title={Use of gray value distribution of run lengths for texture analysis},
+  author={Chu, A and Sehgal, Chandra M and Greenleaf, James F},
+  journal={Pattern Recognition Letters},
+  volume={11},
+  number={6},
+  pages={415--419},
+  year={1990},
+  publisher={Elsevier}
+}
+
+@article{galloway1975texture,
+  title={Texture analysis using gray level run lengths},
+  author={Galloway, Mary M},
+  journal={Computer graphics and image processing},
+  volume={4},
+  number={2},
+  pages={172--179},
+  year={1975},
+  publisher={Elsevier}
+}
+
+@article{xu2004run,
+  title={Run-length encoding for volumetric texture},
+  author={Xu, Dong-Hui and Kurani, Arati S and Furst, Jacob D and Raicu, Daniela S},
+  journal={Heart},
+  volume={27},
+  pages={25},
+  year={2004}
+}
+
+@article{hatt2009fuzzy,
+  title={A fuzzy locally adaptive Bayesian segmentation approach for volume determination in PET},
+  author={Hatt, Mathieu and Rest, Le and Cheze, Catherine and Turzo, Alexandre and Roux, Christian and Visvikis, Dimitris},
+  journal={Medical Imaging, IEEE Transactions on},
+  volume={28},
+  number={6},
+  pages={881--893},
+  year={2009},
+  publisher={IEEE}
+}
+
+@article{davnall2012assessment,
+  title={Assessment of tumor heterogeneity: an emerging imaging tool for clinical practice?},
+  author={Davnall, Fergus and Yip, Connie SP and Ljungqvist, Gunnar and Selmi, Mariyah and Ng, Francesca and Sanghera, Bal and Ganeshan, Balaji and Miles, Kenneth A and Cook, Gary J and Goh, Vicky},
+  journal={Insights into imaging},
+  volume={3},
+  number={6},
+  pages={573--589},
+  year={2012},
+  publisher={Springer}
+}
+
+
+@article{chabat2003obstructive,
+  title={Obstructive Lung Diseases: Texture Classification for Differentiation at CT 1},
+  author={Chabat, Francois and Yang, Guang-Zhong and Hansell, David M},
+  journal={Radiology},
+  volume={228},
+  number={3},
+  pages={871--877},
+  year={2003},
+  publisher={Radiological Society of North America}
+}
+
+@article{napel2010automated,
+  title={Automated Retrieval of CT Images of Liver Lesions on the Basis of Image Similarity: Method and Preliminary Results 1},
+  author={Napel, Sandy A and Beaulieu, Christopher F and Rodriguez, Cesar and Cui, Jingyu and Xu, Jiajing and Gupta, Ankit and Korenblum, Daniel and Greenspan, Hayit and Ma, Yongjun and Rubin, Daniel L},
+  journal={Radiology},
+  volume={256},
+  number={1},
+  pages={243--252},
+  year={2010},
+  publisher={Radiological Society of North America, Inc.}
+}
+
+@article{morris2006using,
+  title={Using wavelet-based functional mixed models to characterize population heterogeneity in accelerometer profiles: a case study},
+  author={Morris, Jeffrey S and Arroyo, Cassandra and Coull, Brent A and Ryan, Louise M and Herrick, Richard and Gortmaker, Steven L},
+  journal={Journal of the American Statistical Association},
+  volume={101},
+  number={476},
+  pages={1352--1364},
+  year={2006},
+  publisher={Taylor \& Francis}
+}
+
+-- biblio Moreau Yosida --
+
+@article{lemarechal1997practical,
+  title={Practical aspects of the Moreau--Yosida regularization: Theoretical preliminaries},
+  author={Lemar{\'e}chal, Claude and Sagastiz{\'a}bal, Claudia},
+  journal={SIAM Journal on Optimization},
+  volume={7},
+  number={2},
+  pages={367--385},
+  year={1997},
+  publisher={SIAM}
+}
+
+@article{mifflin1999properties,
+  title={Properties of the Moreau-Yosida regularization of a piecewise C 2 convex function},
+  author={Mifflin, Robert and Qi, Liqun and Sun, Defeng},
+  journal={Mathematical programming},
+  volume={84},
+  number={2},
+  pages={269--281},
+  year={1999},
+  publisher={Springer}
+}
+
+
+
+
 
