--- a/manuscrit_G_LEFEBVRE/chap_trefle.tex
+++ b/manuscrit_G_LEFEBVRE/chap_trefle.tex
@@ -137,7 +137,7 @@ Le modèle réduit obtenu est alors le suivant~:
 \end{equation}
 %Pour pouvoir incriminer le schéma de transport, réalisons une dernière simplification~: donnons nous une vitesse. Ainsi seule l'équation~\eqref{eq:mod_reduit_test_transp} ci-dessus suffit. 
 %%La 
-où la vitesse~$\vit$ est choisie de sorte à reproduire au mieux la vitesse du système complet. Le champ est d'abord dilatant (pour reproduire la croissance lors de la rechute au premier traitement) puis contractant (lorsque le second traitement agit). La transition entre les deux comportements est une phase dans laquelle on a un mélange des deux comportements. 
+où la vitesse~$\vit$ est \emph{choisie} de sorte à reproduire au mieux la vitesse du système complet. Le champ est d'abord dilatant (pour reproduire la croissance lors de la rechute au premier traitement) puis contractant (lorsque le second traitement agit). La transition entre les deux comportements est une phase dans laquelle on a un mélange des deux comportements. 
 La Figure~\ref{fig:vx_profile} présente l'un des profils de vitesse de la simulation numérique qui génère le trèfle, simulation que l'on a présentée sur la Figure~\ref{fig:trefle}. 
 Au centre de la tumeur (autour de~$x=5\;cm$), il y a un point de compression~: 
 la vitesse est centripète puisque~$v_x$ est positif à droite et négatif à gauche. 
