--- a/manuscrit_G_LEFEBVRE/intro.tex
+++ b/manuscrit_G_LEFEBVRE/intro.tex
@@ -9,12 +9,8 @@
 %siècle.  Dans les pays industrialisés, il est la deuxième cause de mortalité derrière les maladies cardio-vasculaires. 
 \lettrine{L}{e} cancer est, dans les pays industrialisés, la deuxième cause de mortalité derrière les maladies cardio-vasculaires. 
 %% http://www.lexpress.fr/actualite/societe/sante/le-cancer-un-fleau-en-plein-essor_1552976.html
-En 2012, l'OMS\footnote{Organisation Mondiale de la Santé} attribuait à cette maladie approximativement 14 millions de nouveaux cas et 8,2 millions de décès. 
-%% World Cancer Report 2014, IARC
-%% http://onlinelibrary.wiley.com/doi/10.1002/ijc.29210/abstract?userIsAuthenticated=false&deniedAccessCustomisedMessage=
-%% http://www.who.int/mediacentre/factsheets/fs297/fr/
-%% http://onlinelibrary.wiley.com/doi/10.3322/caac.20107/full
-%% http://www.who.int/healthinfo/global_burden_disease/2004_report_update/en/
+En 2012, l'OMS\footnote{Organisation Mondiale de la Santé} attribuait à cette maladie approximativement 14 millions de nouveaux cas et 8,2 millions de décès~\cite{bernard2014world}. 
+
 
 \paragraph{}
 De nombreuses études fondamentales, pré-cliniques ou cliniques ont été réalisées afin de mieux comprendre les mécanismes impliqués dans la genèse et le développement du cancer. De même, de nombreux travaux ont permis d'apprécier la réponse aux traitements. Toutefois, il persiste encore beaucoup d'interrogations sur cette maladie. De nouvelles méthodes d'exploration et de compréhension sont donc nécessairement à développer.
@@ -22,7 +18,7 @@ De nombreuses études fondamentales, pré-cliniques ou cliniques ont été réal
  D'un autre côté, les mathématiques ont pris une place omniprésente dans la vie de tous les jours au travers de la modélisation~: aéronautique, aérospatial, automobile, économie, télécommunication... Elles sont capables de modéliser un très large spectre de problèmes physiques, chimiques, biologiques, épidémiologiques, etc. Pourquoi ne pas les utiliser pour modéliser la croissance tumorale, en particulier pour prédire les rechutes aux traitements ou pour personnaliser les traitements à chaque patient ? 
  
 \paragraph{}
-Les travaux présentés ici s'inscrivent dans cette démarche. Ils constituent un premier pas dans la modélisation de résistance aux traitements, basée sur des images cliniques. 
+Les travaux présentés ici s'inscrivent dans cette démarche~\cite{cornelis2013vivo,jouganous2014}. Ils constituent un premier pas dans la modélisation de résistance aux traitements, basée sur des images cliniques. 
 Plus particulièrement, il s'agit là de proposer un modèle mathématique décrivant la croissance de métastases 
 %(tumeurs filles) 
 (localisations secondaires disséminées à partir d'une lésion primitive)
@@ -45,7 +41,7 @@ utilise le critère RECIST\footnote{de l'anglais~: Response Evaluation Criteria 
 que le diamètre de la plus large lésion. 
 L'information exploitée %retenue 
 semble donc très faible au regard de toutes celles contenues dans les scanners. 
-Plusieurs études ont déjà montrées ses limitations, en particulier lors de traitements anti-angiogéniques REFFF. L'imagerie fait apparaître beaucoup d'autres particularités, notamment l'\hetero tumorale à laquelle nous nous intéresserons tout au long de ce manuscrit. L'\hetero peut-elle être liée à l'émergence de populations cellulaires résistantes ? Peut-on reproduire ce caractère par la modélisation ? Comment la quantifier ?
+Plusieurs études ont déjà montrées ses limitations~\cite{benjamin2007we}, en particulier lors de traitements anti-angiogéniques. L'imagerie fait apparaître beaucoup d'autres particularités, notamment l'\hetero tumorale~\cite{heppner1984tumor,chabat2003obstructive} à laquelle nous nous intéresserons tout au long de ce manuscrit. L'\hetero peut-elle être liée à l'émergence de populations cellulaires résistantes (comme dans le cas des sarcomes~\cite{eary2008spatial}) ? Peut-on reproduire ce caractère par la modélisation ? Comment la quantifier ?
 %La principale particularité à laquelle nous nous intéresserons sera l'\hetero tumorale. Quelles sont les informations sur le comportement de la tumeur que l'ont peut extraire de l'imagerie médicale ? Les critères actuels de lecture de l'imagerie médicale sont-ils suffisant ? L'\hetero peut-elle apportée une information supplémentaire ? 
 
 
@@ -63,10 +59,14 @@ Puis, la manière dont les métastases se disséminent sera abordée. Les diffé
 
 \paragraph{}
 Dans le second chapitre, nous présentons le modèle, qui consiste en un système d'équations aux dérivées partielles (EDPs) non linéaires afin de prendre en compte les aspects spatiaux de la croissance tumorale. Actuellement, 
-les modèles basés sur des équations différentielles ordinaires (EDOs), comme les modèles de Mendelsohn, de Gompertz ou de 
+les modèles basés sur des équations différentielles ordinaires (EDOs), comme les modèles~\cite{gerlee2013model} de Mendelsohn, de Gompertz ou de 
 Bertalanffy, permettent de suivre la croissance de l'aire tumorale mais ils ne considèrent aucun aspect spatial de cette croissance. Nous en référons à l'analyse de Benzekry {\it et al.} pour plus de détails sur de tels modèles 1D~\cite{benzekry2014}. 
 Notre modèle est dans le même esprit que celui de Ribba~{\it et
-  al.}~\cite{Ribba2006532} -- nous vous renvoyons également à~\cite{Iollo2012,gallinato2014} -- pour décrire l'évolution de la maladie. La principale nouveauté du modèle réside en la description des traitements. Deux traitements sont considérés~: le premier traitement a un effet cytotoxique alors que le second a un effet à la fois cytotoxique et antiangiogénique. Trois populations de cellules proliférantes sont utilisées pour décrire la résistance aux traitements~: une population de cellules sensible aux deux traitements, une autre sensible uniquement au second traitement et une dernière résistante aux deux traitements.  
+  al.}~\cite{Ribba2006532} -- nous vous renvoyons également à~\cite{Iollo2012,gallinato2014} -- pour décrire l'évolution de la maladie. 
+En ce qui concerne notre modèle, il a été choisi de travailler en 2D d'espace dans le but de coller avec les habitudes des radiologistes (le critère RECIST imposant de sélectionner une coupe). De nombreux modèles spatiaux existent déjà~: des modèles basés sur des automates  cellulaires~\cite{alarcon2003cellular,drasdo2003individual}, à ceux basés sur la théorie du mélange~\cite{ambrosi2002}, en passant par les modèles d'agents~\cite{mansury2002emerging} et les modèles basés sur la théorie de réaction-diffusion~\cite{rockne2009mathematical} ou sur la mécanique des fluides~\cite{Iollo2012}. Plusieurs échelles de modélisation sont couvertes par ce panel de modèles~\cite{cristini2010multiscale}. Afin de reproduire les données cliniques, un modèle macroscopique a été choisi ici. 
+%%%%% on n'a pas choisi le modele de diffusion car requiert une connaissance au bord de la tumeur, qui ne peut pas etre extraite precisemment des scanners + bord tumoral = notion controversé
+
+La principale nouveauté du modèle réside en la description des traitements. Deux traitements sont considérés~: le premier traitement a un effet cytotoxique alors que le second a un effet à la fois cytotoxique et antiangiogénique. Trois populations de cellules proliférantes sont utilisées pour décrire la résistance aux traitements~: une population de cellules sensible aux deux traitements, une autre sensible uniquement au second traitement et une dernière résistante aux deux traitements.  
 Nous incorporons également un modèle simple d'angiogenèse puisqu'elle joue un rôle crucial dans la croissance métastatique.
 
 
@@ -99,7 +99,21 @@ Cette construction d'images scanners de synthèse permettra une meilleure compar
 
 
 \paragraph{}
-Dans le cinquième et dernier chapitre, nous chercherons un critère permettant de quantifier l'\hetero. \todo[noline]{Etat de l'art sur la construction de quantificateur de l'\hetero} Ce critère devra être applicable aussi bien aux données cliniques qu'aux résultats fournis par la simulation numérique. Et c'est ce qui fait ici l'originalité de la construction d'un tel critère. 
+Dans le cinquième et dernier chapitre, nous chercherons un critère permettant de quantifier l'\hetero.  %%\todo[noline]{Etat de l'art sur la construction de quantificateur de l'\hetero} 
+%\cite{materka1998texture,castellano2004texture} %% presentation des diverses methodes
+%\cite{davnall2012assessment} %%% quantifying heterogeneity by several method
+%\cite{haralick1979statistical} %% pere des methodes structurelles et statistiques
+%\cite{galloway1975texture,chu1990use,xu2004run} %% run-length matrix
+%\cite{pal1993review,hatt2009fuzzy,hatt2010accurate} %%% methode conduisant a une segmentation
+%\cite{chabat2003obstructive} %%% classification de texture
+%\cite{longo2015cluster} %% methode de clustering
+%\cite{ahmed2013texture} %% matrice de cooccurence
+% \cite{morris2006using} %% ref julien sur wavelet
+De nombreuses possibilités sont offertes~\cite{materka1998texture,davnall2012assessment,castellano2004texture} pour comparer des textures~\cite{chabat2003obstructive,napel2010automated} ou bien détecter des contours ou des zones homogènes~\cite{pal1993review}. On pourra citer notamment des méthodes statistiques~\cite{haralick1979statistical} (étude de diverses quantités provenant des histogrammes de niveaux de gris ou bien de diverses autres quantités comme le gradient absolu ou la matrice run-length~\cite{galloway1975texture,chu1990use,xu2004run} ou encore la matrice de co-occurrence~\cite{ahmed2013texture}), les méthodes de clustering~\cite{longo2015cluster}, les méthodes de segmentation~\cite{hatt2009fuzzy,hatt2010accurate} ou encore les méthodes dites  wavelet~\cite{davnall2012assessment,morris2006using}.
+Le critère que l'on utilise dans ce mémoire est 
+%Ce critère devra être 
+applicable aussi bien aux données cliniques qu'aux résultats fournis par la simulation numérique. 
+Et c'est ce qui fait ici l'originalité de la construction de celui-ci. % d'un tel critère. 
 La méthode proposée dans ce manuscrit est basée sur l'analyse %des niveaux de gris 
 de l'intensité des pixels 
 qui constituent les images (cliniques et numériques). 
